fixed the uneven margin problem

--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,15 @@ body{
 
 .videolistings{
     margin: 20px 30px;
-    
+
+    /* border: 2px solid black; */
 }
 
 .videobox{
-    grid-gap: 10px;
+
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 2px));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 2fr));
+    /* grid-template-columns: 25% 25% 25% 25%; */
 }
 
 .card {
@@ -80,10 +82,7 @@ body{
     background: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    /* background-color: var(--white); */
     border-radius: 10px;
-    /* box-shadow: 0px 10px 12px rgba(0, 0, 0, 0.08),
-        -4px -4px 12px rgba(0, 0, 0, 0.08); */
     box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 1);
     overflow: hidden;
     transition: all 0.3s;
@@ -93,7 +92,9 @@ body{
     border: 2px solid black;
 }
 
-
+.card a{
+    text-decoration: none;
+}
 
 .card-image-container {
     border-radius: 10px;
@@ -172,7 +173,5 @@ i{
         align-items: center;
         justify-content: center;
     }
-    .card a{
-        text-decoration: none;
-    }
+    
 }
